Impl [Services] Apply Services for Single and Multiple Services

--- a/src/igz_controls/less/inputs.less
+++ b/src/igz_controls/less/inputs.less
@@ -20,6 +20,7 @@ input[type=checkbox] {
         flex-flow: row nowrap;
         align-items: center;
         line-height: 1;
+        color: unset;
         vertical-align: top;
         margin: 0;
         padding: 0;
