--- a/src/igz_controls/components/size/size.less
+++ b/src/igz_controls/components/size/size.less
@@ -4,6 +4,7 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
+    min-height: 40px;
 
     &:after {
         content: ' ';
