[Nuclio][Functions] Resize Function "Name" column

--- a/src/nuclio/functions/functions.less
+++ b/src/nuclio/functions/functions.less
@@ -41,4 +41,11 @@ ncl-functions {
       padding-bottom: 0;
     }
   }
+
+  .common-table {
+    .function-collapse-cell {
+      padding: 0 15px;
+      width: 30px;
+    }
+  }
 }
