Impl [General] Rename "Project Admin" to "Project Security Admin"

--- a/src/igz_controls/components/multiple-checkboxes/multiple-checkboxes.less
+++ b/src/igz_controls/components/multiple-checkboxes/multiple-checkboxes.less
@@ -10,7 +10,16 @@
         padding: 0;
 
         .multiple-checkboxes-option {
+            display: flex;
             margin: 5px 0;
+
+            .more-info-wrapper {
+                height: auto;
+
+                .igz-icon-help-round {
+                    font-size: 14px;
+                }
+            }
         }
     }
 
