Impl [Nuclio] Add pods priority to Nuclio function (UI)

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.less
@@ -38,7 +38,7 @@
                     width: 35%
                 }
 
-                .gpu-number-input, .replicas-number-input, .preemtion-mode-input {
+                .gpu-number-input, .replicas-number-input, .preemtion-mode-input, .priority-class-input {
                     width: 85%;
                 }
             }
