Impl [UI] Ability for IT_admin to set labels on app nodes ( vanilla K8s)

--- a/src/igz_controls/less/table.less
+++ b/src/igz_controls/less/table.less
@@ -76,6 +76,10 @@
         &.centered {
             justify-content: center;
         }
+
+        &.overflow-visible {
+            overflow: visible;
+        }
     }
 
     //
