Fix [UI] add labels and change wizard title

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -660,6 +660,14 @@
     .generateIconClass(a18);
 }
 
+.igz-icon-kubernetes {
+    .generateIconClass(99c);
+}
+
+.igz-icon-ssh {
+    .generateIconClass(900);
+}
+
 .igz-icon-string {
     .generateIconClass(992);
 }
