Impl [UI] Webapi - Add option to expose direct port access

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -103,6 +103,10 @@
     font-size: 16px;
 }
 
+.igz-icon-copy-all {
+    .generateIconClass(99d);
+}
+
 .igz-icon-tick-round {
     .generateIconClass(90a);
 }
