--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/auto-scale-metrics-table/auto-scale-metrics-input/auto-scale-metrics-input.less
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/auto-scale-metrics-table/auto-scale-metrics-input/auto-scale-metrics-input.less
@@ -36,16 +36,24 @@
         }
       }
 
-      .input-key-wrapper {
-        width: 39%;
+      .input-type-wrapper {
+        width: 29%;
 
-        .input-key {
+        .input-type {
+          flex-grow: 1;
+        }
+      }
+
+      .input-presets-wrapper {
+        width: 20%;
+
+        .input-presets {
           flex-grow: 1;
         }
       }
 
       .input-value-wrapper {
-        width: 60%;
+        width: 50%;
 
         .input-value {
           flex-grow: 1;
