Fix [UI] "Auto scale metrics" bugs

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/auto-scale-metrics-table/auto-scale-metrics-input/auto-scale-metrics-input.less
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/auto-scale-metrics-table/auto-scale-metrics-input/auto-scale-metrics-input.less
@@ -37,6 +37,8 @@
       }
 
       .input-type-wrapper {
+        display: flex;
+        align-items: center;
         width: 29%;
 
         .input-type {
@@ -45,6 +47,8 @@
       }
 
       .input-presets-wrapper {
+        display: flex;
+        align-items: center;
         width: 20%;
 
         .input-presets {
@@ -60,8 +64,13 @@
         }
       }
 
+      .dropdown {
+        display: flex;
+        align-items: center;
+      }
+
       .slider {
-        padding-left: 20px;
+        padding-left: 10px;
       }
     }
   }
