--- a/src/igz_controls/less/dialogs.less
+++ b/src/igz_controls/less/dialogs.less
@@ -99,6 +99,15 @@
             padding-right: 24px;
         }
 
+        .subtitle {
+            color: @ngdialog-title-color;
+            font-family: @font-family-sans-serif;
+            font-size: 15px;
+            font-weight: 400;
+            margin: 10px 0 20px 0;
+            padding-right: 24px;
+        }
+
         .main-content {
             margin: 0 0 20px 0;
 
