--- a/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -471,6 +471,10 @@
                     }
                 }
 
+                .tls-verification {
+                    margin: 0 5px 15px;
+                }
+
                 .key-header {
                     width: 56%;
                     margin-left: 44px;
