Fix[UI] error reason is not displayed when updating app node label fails

--- a/src/igz_controls/components/toast-status-panel/toast-status-panel.tpl.html
+++ b/src/igz_controls/components/toast-status-panel/toast-status-panel.tpl.html
@@ -6,6 +6,8 @@
     </div>
     <div class="panel-status">
         <span class="panel-status-icon"></span>
-        <span class="panel-status-msg">{{$ctrl.getStateMessage($ctrl.panelState)}}</span>
+        <div class="igz-scrollable-container msg-scrollable-container" data-ng-scrollbars>
+            <div class="panel-status-msg">{{$ctrl.getStateMessage($ctrl.panelState)}}</div>
+        </div>
     </div>
 </div>
