--- a/src/igz_controls/components/toast-status-panel/toast-status-panel.tpl.html
+++ b/src/igz_controls/components/toast-status-panel/toast-status-panel.tpl.html
@@ -6,9 +6,11 @@
     </div>
     <div class="panel-status">
         <span class="panel-status-icon"></span>
-        <div class="panel-status-msg" data-ng-if="$ctrl.isTranscludePassed" data-ng-transclude></div>
-        <span class="panel-status-msg" data-ng-if="!$ctrl.isTranscludePassed">
-            {{$ctrl.getStateMessage($ctrl.panelState)}}
-        </span>
+        <div class="igz-scrollable-container msg-scrollable-container" data-ng-scrollbars>
+            <div class="panel-status-msg" data-ng-if="$ctrl.isTranscludePassed" data-ng-transclude></div>
+            <div class="panel-status-msg" data-ng-if="!$ctrl.isTranscludePassed">
+                {{$ctrl.getStateMessage($ctrl.panelState)}}
+            </div>
+        </div>
     </div>
 </div>
