Impl [UI] Revamp Login Screen and Session expired popup

--- a/src/igz_controls/components/validating-input-field/validating-input-field.less
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.less
@@ -42,6 +42,13 @@
         }
     }
 
+    .view-password{
+        position: absolute;
+        right: 9px;
+        bottom: 0;
+        z-index: 3;
+    }
+
     .validation-icon,
     .validation-rule-icon {
         width: 14px;
