--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -103,6 +103,11 @@
     font-size: 16px;
 }
 
+.igz-icon-hide {
+    .generateIconClass(99e);
+    font-size: 16px;
+}
+
 .igz-icon-copy-all {
     .generateIconClass(99d);
 }
