Impl [UI] Allow use ALL configmap configuration in the environment variable

--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -337,7 +337,7 @@
                      data-ng-class="{'disabled': $ctrl.readOnly}"
                      data-ng-click="$ctrl.addNewAnnotation($event)">
                     <span class="igz-icon-add-round"></span>
-                    {{ 'functions:CREATE_NEW_ANNOTATION' | i18next }}
+                    {{ 'functions:ADD_NEW_ANNOTATION' | i18next }}
                 </div>
             </div>
 
@@ -368,7 +368,7 @@
                      data-ng-class="{'disabled': $ctrl.readOnly}"
                      data-ng-click="$ctrl.addNewEventHeader($event)">
                     <span class="igz-icon-add-round"></span>
-                    {{ 'functions:CREATE_NEW_EVENT_HEADER' | i18next }}
+                    {{ 'functions:ADD_NEW_EVENT_HEADER' | i18next }}
                 </div>
             </div>
 
@@ -399,7 +399,7 @@
                      data-ng-class="{'disabled': $ctrl.readOnly}"
                      data-ng-click="$ctrl.addNewSubscription($event)">
                     <span class="igz-icon-add-round"></span>
-                    {{ 'functions:CREATE_NEW_SUBSCRIPTION' | i18next }}
+                    {{ 'functions:ADD_NEW_SUBSCRIPTION' | i18next }}
                 </div>
             </div>
 
