--- a/src/nuclio/common/components/key-value-input/key-value-input.less
+++ b/src/nuclio/common/components/key-value-input/key-value-input.less
@@ -137,6 +137,10 @@
                     }
                 }
 
+                &.type-name-table {
+                    width: 80%;
+                }
+
                 &.only-key-value-input {
                     width: 62%;
                 }
@@ -171,15 +175,22 @@
             }
 
             .input-type-wrapper {
-                width: 13%;
+                width: 20%;
+                margin-right: 10px;
 
                 .type-label {
                     width: 60px;
+                    text-align: left;
                     padding-left: 7px;
                 }
 
                 &.all-value-types {
                     width: 20%;
+                }
+
+                &.type-name-table {
+                    width: 30%;
+                    margin-right: 10px;
                 }
 
                 .input-type {
